*Added code to switch the pulsar connection by enabled auth from config file.